Thu Jun 16 15:41:32 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (load_file): '!' is already read. reported by gotoyuzo.

Thu Jun 16 15:09:38 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tcltklib.c (ip_rb_threadVwaitCommand): Tcl_Release was missing.

Thu Jun 16 13:34:48 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: add Tk.getMultiple{Open|Save}File() which return
	  an Array of selected files.

Thu Jun 16 12:53:24 2005  Tanaka Akira  <akr@m17n.org>

	* lib/time.rb (Time.parse): "Fri Jan  1 08:59:60 +0900 1999" was
	  parsed as "Fri Jan 01 09:00:00 JST 1999" even on an environment
	  which supports leap seconds.
	  (Time.rfc2822): ditto.
	  (Time.xmlschema): ditto.

Thu Jun 16 00:13:41 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Resource#ttl): new attribute.
	  (Resolv::DNS::Resource#==): ignore @ttl.
	  (Resolv::DNS::Resource#hash): ditto.
	  (Resolv::DNS::Message::MessageDecoder#get_rr): save TTL in a
	  Resource object.
	  based on [ruby-core:5190] by Eric Hodel.

Wed Jun 15 18:26:39 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: support "tk inactive" sub-command [for Tcl/Tk8.5a3]

	* ext/tk/lib/tk/namespace.rb: support "namespace path" sub-command and
	  'namespace ensemble' sub-command [for Tcl/Tk8.5a3]

Tue Jun 14 02:02:43 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil/tkutil.c: add TkUtil::CallbackSubst.subst_arg(m, ...)
	  & _define_attribute_aliases(hash) to get substitution-argument from
	  attributes (e.g. subst_arg(:x,:y,:num,:button) --> "%x %y %b %b ").

	* ext/tk/lib/tk/event.rb: use _define_attribute_aliases().

Mon Jun 13 13:03:08 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* hash.c (ruby_setenv): fixed SEGV. [ruby-dev:26186]

Mon Jun 13 01:54:20 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (sigexit): call rb_thread_signal_exit() instead of
	  rb_exit().  [ruby-dev:26347]
